Add patients personal dat

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
@@ -93,23 +94,84 @@
             <h2>Patients</h2>
             <img src="./assets/search.png" alt="search" />
           </div>
-          <div class="patients-list my-4">
-            <div class="patient">
-              <div class="d-flex gap-4 patient-details">
-                <img class="avartar" src="./assets/senior-woman.png" />
-                <div>
-                  <p class="name">Martha Curtis</p>
-                  <span> Male, 45 </span>
-                </div>
-              </div>
-              <img class="more-btn" src="./assets/more_vert.png" />
-            </div>
-          </div>
+          <div class="patients-list my-4"></div>
         </aside>
         <div class="col-5 mx-5">2 of 3 (wider)</div>
-        <div class="col">3 of 3</div>
+        <div class="col d-flex-col pat-info">
+          <aside class="mb-5">
+            <img
+              class="pro-pic"
+              src="./assets/senior-woman.png"
+              alt="patient-profile"
+            />
+            <h2>Jessica Taylor</h2>
+            <div class="align-self-start patient-more-details">
+              <div class="dob">
+                <img src="./assets/BirthIcon.png" alt="calendar" />
+                <span>
+                  <p>Date of Birth</p>
+                  <p>12th May, 1980</p>
+                </span>
+              </div>
+              <div class="gender">
+                <img src="./assets/FemaleIcon.png" alt="calendar" />
+                <span>
+                  <p>Gender</p>
+                  <p>Female</p>
+                </span>
+              </div>
+              <div class="contact">
+                <img src="./assets/PhoneIcon.png" alt="contact" />
+                <span>
+                  <p>Contact Info.</p>
+                  <p>+2547074565</p>
+                </span>
+              </div>
+              <div class="emergency-contact">
+                <img src="./assets/PhoneIcon.png" alt="emergency-contact" />
+                <span>
+                  <p>Emergency Contact.</p>
+                  <p>+2547074565</p>
+                </span>
+              </div>
+              <div class="insurance-provider">
+                <img
+                  src="./assets/InsuranceIcon.png"
+                  alt="insurance-provider"
+                />
+                <span>
+                  <p>Emergency Contact.</p>
+                  <p>+2547074565</p>
+                </span>
+              </div>
+            </div>
+          </aside>
+          <aside>
+            <div class="align-self-start">
+              <h2>Lab Results</h2>
+              <div>
+                <div class="lab-result1">
+                  <p>Complete Blood Count</p>
+                  <img src="./assets/download.png" alt="downd-button" />
+                </div>
+                <div class="lab-result1">
+                  <p>Complete Blood Count</p>
+                  <img src="./assets/download.png" alt="downd-button" />
+                </div>
+                <div class="lab-result1">
+                  <p>Complete Blood Count</p>
+                  <img src="./assets/download.png" alt="downd-button" />
+                </div>
+                <div class="lab-result1">
+                  <p>Complete Blood Count</p>
+                  <img src="./assets/download.png" alt="downd-button" />
+                </div>
+              </div>
+            </div>
+          </aside>
+        </div>
       </div>
     </main>
   </body>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </html>
