Add Patient info aside section

--- a/index.html
+++ b/index.html
@@ -96,80 +96,8 @@
           </div>
           <div class="patients-list my-4"></div>
         </aside>
-        <div class="col-5 mx-5">2 of 3 (wider)</div>
-        <div class="col d-flex-col pat-info">
-          <aside class="mb-5">
-            <img
-              class="pro-pic"
-              src="./assets/senior-woman.png"
-              alt="patient-profile"
-            />
-            <h2>Jessica Taylor</h2>
-            <div class="align-self-start patient-more-details">
-              <div class="dob">
-                <img src="./assets/BirthIcon.png" alt="calendar" />
-                <span>
-                  <p>Date of Birth</p>
-                  <p>12th May, 1980</p>
-                </span>
-              </div>
-              <div class="gender">
-                <img src="./assets/FemaleIcon.png" alt="calendar" />
-                <span>
-                  <p>Gender</p>
-                  <p>Female</p>
-                </span>
-              </div>
-              <div class="contact">
-                <img src="./assets/PhoneIcon.png" alt="contact" />
-                <span>
-                  <p>Contact Info.</p>
-                  <p>+2547074565</p>
-                </span>
-              </div>
-              <div class="emergency-contact">
-                <img src="./assets/PhoneIcon.png" alt="emergency-contact" />
-                <span>
-                  <p>Emergency Contact.</p>
-                  <p>+2547074565</p>
-                </span>
-              </div>
-              <div class="insurance-provider">
-                <img
-                  src="./assets/InsuranceIcon.png"
-                  alt="insurance-provider"
-                />
-                <span>
-                  <p>Emergency Contact.</p>
-                  <p>+2547074565</p>
-                </span>
-              </div>
-            </div>
-          </aside>
-          <aside>
-            <div class="align-self-start">
-              <h2>Lab Results</h2>
-              <div>
-                <div class="lab-result1">
-                  <p>Complete Blood Count</p>
-                  <img src="./assets/download.png" alt="downd-button" />
-                </div>
-                <div class="lab-result1">
-                  <p>Complete Blood Count</p>
-                  <img src="./assets/download.png" alt="downd-button" />
-                </div>
-                <div class="lab-result1">
-                  <p>Complete Blood Count</p>
-                  <img src="./assets/download.png" alt="downd-button" />
-                </div>
-                <div class="lab-result1">
-                  <p>Complete Blood Count</p>
-                  <img src="./assets/download.png" alt="downd-button" />
-                </div>
-              </div>
-            </div>
-          </aside>
-        </div>
+        <div class="col-6 mx-4">2 of 3 (wider)</div>
+        <div class="col d-flex-col pat-info"></div>
       </div>
     </main>
   </body>
