--- a/index.html
+++ b/index.html
@@ -99,6 +99,30 @@
         </aside>
         <div class="col-6 mx-4">
           <canvas class="chart-container"></canvas>
+          <div id="chart-legends"></div>
+          <!-- <div class="legend-details">
+            <div>
+              <div class="d-flex gap-1">
+                <span class="legends"></span>
+                Systolic
+              </div>
+              160
+              <div class="d-flex gap-1">
+                <img src="./assets/ArrowUp.svg" alt="up" />
+                <span>Higher than Average</span>
+              </div>
+            </div>
+            <div>
+              <div class="d-flex gap-1">
+                <span class="legends"></span> Diastolic
+              </div>
+              78
+              <div class="d-flex gap-1">
+                <img src="./assets/ArrowDown.svg" alt="down" />
+                <span>Lower than Average</span>
+              </div>
+            </div>
+          </div> -->
         </div>
         <div class="col d-flex-col pat-info"></div>
       </div>
