--- a/index.html
+++ b/index.html
@@ -110,8 +110,11 @@
                 </div>
               </div>
             </div>
+            <div
+              class="d-flex justify-content-between gap-2 mt-5 tension-stats"
+            ></div>
           </div>
-          <div class="tension-stats"></div>
+          <div class="diagnostic-list mt-4"></div>
         </div>
 
         <div class="col d-flex-col pat-info"></div>
