White space fix

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               Overview</a
             >
           </li>
-          <li>
+          <li class="active-nav">
             <a href="#">
               <img
                 class="navlink-icon"
@@ -90,12 +90,12 @@
     <main>
       <div class="d-flex flex-row">
         <!-- patients list -->
-        <aside class="col gap-1">
+        <aside class="col p-0">
           <div class="patients-header">
             <h2>Patients</h2>
             <img src="./assets/search.png" alt="search" />
           </div>
-          <div class="patients-list my-4"></div>
+          <div class="patients-list"></div>
         </aside>
         <div class="col-7 mx-4">
           <div class="stats-container">
